--- a/index.html
+++ b/index.html
@@ -16,18 +16,19 @@
     <script type="text/babel">
         class App extends React.Component {
             state = {
-             name: 'Ryu',
-             age: 30
-            }
+             name: 'Albert',
+             age: 35
+            } // makes an object in which has an array
            render() {
                return (
                <div className="app-content">
                 <h1>Hey, ninjas</h1>
-                <p>My name is: { this.state.name }</p> 
+                <p>My name is: { this.state.name } and I am { this.state.age }</p> 
+                // using the 'this' method it calles the state object and calls for the name and the age of person with the name
                </div>    
              )
            } 
-        
+        }
         ReactDOM.render(<App />, document.getElementById('app'));
     </script>
     
