--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
                <div className="app-content">
                 <h1>My name is: { this.state.name }</h1> 
                <form onSubmit={this.handleSubmit}>
-               <input type="text" onChange={this.handleChange}/> // once it calls the functions, once you enter some text it changes the name as well
+               <input type="text" onChange={this.handleChange} /> 
                <button>Submit</button>
                </form>
+               </div>
+               // once it calls the functions using onChange, once you enter some text it changes the name as well
              )
            }
           }
